k8s/pod-chaos-monkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-pod-chaos-monkey
spec:
  selector:
    matchLabels:
      app: kubernetes-pod-chaos-monkey
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes-pod-chaos-monkey
    spec:
      containers:
      - name: kubernetes-pod-chaos-monkey
        image: jnewland/kubernetes-pod-chaos-monkey
        imagePullPolicy: Always
